Updated copilot instruction file. small fixes in configuration